# knowledge-probing-framework

./: README.md  project-requirements.txt  pyproject.toml
notebooks/: seed_impact.ipynb
paper_data/: entity_counts.pkl
paper_data/prompting_results/: EleutherAI_pythia-1.4b_prompting_results_without_activations.pkl  Meta-Llama-3-8B_prompting_results_without_activations.pkl  Mistral-7B-v0.1_prompting_results_without_activations.pkl  Phi-1_5_prompting_results_without_activations.pkl
scripts/: main.py  run_all.sh
scripts/reproduce_figures/: constants.py  relation_knowledge_source_count_figure.py  subject_frequency_figure.py  success_rate_figure.py
src/: data.py  model.py  statements.py  utils.py
